--- a/src/style/_icons.scss
+++ b/src/style/_icons.scss
@@ -27,89 +27,23 @@
 @function icon-char($filename) {
 	$char: "";
 
-	@if $filename == alarm {
+	@if $filename == arrow-r {
 		$char: "\E001";
 	}
-	@if $filename == arrow-down {
+	@if $filename == facebook {
 		$char: "\E002";
 	}
-	@if $filename == arrow-left {
+	@if $filename == g-plus {
 		$char: "\E003";
 	}
-	@if $filename == arrow-right {
+	@if $filename == play {
 		$char: "\E004";
 	}
-	@if $filename == book {
+	@if $filename == search {
 		$char: "\E005";
 	}
-	@if $filename == bullseye {
-		$char: "\E006";
-	}
-	@if $filename == cart {
-		$char: "\E007";
-	}
-	@if $filename == comment {
-		$char: "\E008";
-	}
-	@if $filename == computer {
-		$char: "\E009";
-	}
-	@if $filename == dribbble {
-		$char: "\E00A";
-	}
-	@if $filename == equalizer {
-		$char: "\E00B";
-	}
-	@if $filename == eye {
-		$char: "\E00C";
-	}
-	@if $filename == facebook {
-		$char: "\E00D";
-	}
-	@if $filename == g-plus {
-		$char: "\E00E";
-	}
-	@if $filename == graph {
-		$char: "\E00F";
-	}
-	@if $filename == home {
-		$char: "\E010";
-	}
-	@if $filename == image {
-		$char: "\E011";
-	}
-	@if $filename == instagram {
-		$char: "\E012";
-	}
-	@if $filename == picture {
-		$char: "\E013";
-	}
-	@if $filename == pin {
-		$char: "\E014";
-	}
-	@if $filename == pinterest {
-		$char: "\E015";
-	}
-	@if $filename == point {
-		$char: "\E016";
-	}
-	@if $filename == search {
-		$char: "\E017";
-	}
-	@if $filename == speech {
-		$char: "\E018";
-	}
-	@if $filename == tumblr {
-		$char: "\E019";
-	}
 	@if $filename == twitter {
-		$char: "\E01A";
-	}
-	@if $filename == users {
-		$char: "\E01B";
-	}
-	@if $filename == youtube {
-		$char: "\E01C";
+		$char: "\E006";
 	}
 
 	@return $char;
@@ -126,41 +60,8 @@
 	}
 }
 
-.icon-alarm {
-	@include icon(alarm);
-}
-.icon-arrow-down {
-	@include icon(arrow-down);
-}
-.icon-arrow-left {
-	@include icon(arrow-left);
-}
-.icon-arrow-right {
-	@include icon(arrow-right);
-}
-.icon-book {
-	@include icon(book);
-}
-.icon-bullseye {
-	@include icon(bullseye);
-}
-.icon-cart {
-	@include icon(cart);
-}
-.icon-comment {
-	@include icon(comment);
-}
-.icon-computer {
-	@include icon(computer);
-}
-.icon-dribbble {
-	@include icon(dribbble);
-}
-.icon-equalizer {
-	@include icon(equalizer);
-}
-.icon-eye {
-	@include icon(eye);
+.icon-arrow-r {
+	@include icon(arrow-r);
 }
 .icon-facebook {
 	@include icon(facebook);
@@ -168,45 +69,12 @@
 .icon-g-plus {
 	@include icon(g-plus);
 }
-.icon-graph {
-	@include icon(graph);
-}
-.icon-home {
-	@include icon(home);
-}
-.icon-image {
-	@include icon(image);
-}
-.icon-instagram {
-	@include icon(instagram);
-}
-.icon-picture {
-	@include icon(picture);
-}
-.icon-pin {
-	@include icon(pin);
-}
-.icon-pinterest {
-	@include icon(pinterest);
-}
-.icon-point {
-	@include icon(point);
+.icon-play {
+	@include icon(play);
 }
 .icon-search {
 	@include icon(search);
 }
-.icon-speech {
-	@include icon(speech);
-}
-.icon-tumblr {
-	@include icon(tumblr);
-}
 .icon-twitter {
 	@include icon(twitter);
-}
-.icon-users {
-	@include icon(users);
-}
-.icon-youtube {
-	@include icon(youtube);
 }
