--- a/src/template/parts/_section-top.html
+++ b/src/template/parts/_section-top.html
@@ -1,1 +1,20 @@
-Hello
+<section class="section section--top">
+    <div class="container">
+        <div class="header">
+            <div class="header__logo">
+                Wild_
+            </div>
+            <nav class="nav">
+                <a href="#" class="nav__item">Home</a>
+                <a href="#" class="nav__item">About</a>
+                <a href="#" class="nav__item">Gallery</a>
+                <a href="#" class="nav__item">Journal</a>
+                <a href="#" class="nav__item">Contact</a>
+            </nav>
+            <form action="#" class="search">
+                <input type="text" name="search" placeholder="Search" class="search__input">
+                <button class="btn search__btn" type="button"><i class="icon-search"></i></button>
+            </form>
+        </div>
+    </div>
+</section>
